--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
         <div class="timer">Time: <span id="time">0</span></div>
     
-        <div class="wrapper">
+        <div class="container">
           <div id="start-screen" class="start">
             <h1>Coding Quiz Challenge</h1>
             <p>
@@ -28,8 +28,7 @@
           <div id="end-screen" class="hide">
             <h2>All done!</h2>
             <p>Your final score is <span id="final-score"></span>.</p>
-            <p>
-              Enter initials: <input type="text" id="initials" />
+            <p>Enter initials: <input type="text" id="initials" />
               <button id="submit">Submit</button>
             </p>
           </div>
